prevent page break in code blocks + force wrap in pre tags (because you can't scroll...)

--- a/src/theme/book.css
+++ b/src/theme/book.css
@@ -296,4 +296,13 @@ html, body {
         page-break-after: avoid;
         /*break-after: avoid;*/
     }
+
+    pre, code {
+        page-break-inside: avoid;
+        white-space: pre-wrap;       /* CSS 3 */
+        white-space: -moz-pre-wrap;  /* Mozilla, since 1999 */
+        white-space: -pre-wrap;      /* Opera 4-6 */
+        white-space: -o-pre-wrap;    /* Opera 7 */
+        word-wrap: break-word;       /* Internet Explorer 5.5+ */
+    }
 }
